<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="ru.dzgeorgy.auth.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?attr/textAppearanceHeadline2"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/login_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/inputs_side_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/inputs_side_margin"
            android:hint="@string/login_hint"
            android:visibility="@{viewModel.directAuthEnabled ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/password_input"
            app:layout_constraintTop_toBottomOf="@id/appname_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusForward="@id/password_input" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/inputs_side_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/inputs_side_margin"
            android:hint="@string/password_hint"
            android:visibility="@{viewModel.directAuthEnabled ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/sign_in_btn"
            app:layout_constraintTop_toBottomOf="@id/login_input">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:nextFocusForward="@id/sign_in_btn" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:visibility="@{viewModel.directAuthEnabled ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/or_text"
            app:layout_constraintEnd_toEndOf="@id/password_input"
            app:layout_constraintStart_toStartOf="@id/password_input"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            android:textAppearance="?attr/textAppearanceBody1"
            android:visibility="@{viewModel.directAuthEnabled ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/vk_sign_in_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vk_sign_in_btn"
            style="@style/Widget.LeafTheme.VKButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/inputs_side_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/inputs_side_margin"
            android:onClick="@{() -> viewModel.onVkSignInClick()}"
            android:text="@string/vk_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>